# intraday-trader

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE.txt  Makefile  README.md  README.zh.md  config.yml  docker-compose.yml  intraday_changes.diff  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: ci.yml
docs/: additional_guide.md  broker-guide.md  course-background.md  current_project_overview.md  design-rationale.md  docker-guide.md  exam-guidelines.md  exam_guidelines.md  general_requirements.md  general_requirements_2.md  metrics-reference.md  project-manual.md  project-requirements.md  project_requirements.md  risk-engine.md  sampling_frequency_experiments.md  strategy-reference.md  streamlit-guide.md  workflow-cookbook.md
notebooks/: notebook.ipynb
notebooks/images/: architectural_flowchart.md
project_tools/: combine_code.py
src/intraday_trader/: cli.py  configuration.py  consistency_validator.py  dashboard_app.py  data_utils.py  db_handler.py  exception_handler.py  live_components.py  logging_utils.py  performance_analyzer.py  plotting.py  qee_execution_backend.py  qee_target_exporter.py
src/intraday_trader/analytics/: __init__.py  risk.py
src/intraday_trader/backtest/: __init__.py  engine.py
src/intraday_trader/brokers/: __init__.py  alpaca.py  factory.py  futu.py  protocols.py
src/intraday_trader/data_providers/: __init__.py  alpaca.py  factory.py  futu.py  protocols.py
src/intraday_trader/execution/: __init__.py  executor.py  order_plan.py  targets.py
src/intraday_trader/live/: __init__.py  session.py
src/intraday_trader/scripts/: run_backfill_data.py  run_backtests.py  run_generate_report.py  run_live_trading.py  run_update_data.py
src/intraday_trader/storage/: __init__.py  models.py
src/intraday_trader/strategies/: buy_and_hold.py  ema_crossover.py  mean_reversion.py  ratio.py  utils.py
src/intraday_trader_air/: backtest_utils.py  broker_handler.py  cli.py  configuration.py  consistency_validator.py  dashboard_app.py  data_quality.py  data_utils.py  db_handler.py  exception_handler.py  live_components.py  logging_utils.py  performance_analyzer.py  plotting.py  progress_utils.py  risk_manager.py
src/intraday_trader_air/analytics/: __init__.py  costs.py  relative.py
src/intraday_trader_air/backtest/: __init__.py  engine.py
src/intraday_trader_air/live/: __init__.py  session.py
src/intraday_trader_air/scripts/: run_backfill_data.py  run_backtests.py  run_generate_report.py  run_live_trading.py  run_update_data.py
src/intraday_trader_air/storage/: __init__.py  parquet.py
src/intraday_trader_air/strategies/: __init__.py  base.py  buy_and_hold.py  ema_crossover.py  mean_reversion.py  ratio.py  utils.py
src/patf_trading_framework/: cli.py  configuration.py  consistency_validator.py  dashboard_app.py  data_utils.py  db_handler.py  exception_handler.py  live_components.py  logging_utils.py  performance_analyzer.py  risk_manager.py  strategies.py
src/patf_trading_framework/backtest/: __init__.py  engine.py
src/patf_trading_framework/scripts/: run_backtests.py  run_dashboard.py  run_generate_report.py  run_live_trading.py  run_update_data.py
src/patf_trading_framework/strategies/: __init__.py  base.py  mean_reversion.py  ratio.py  utils.py
tests/: conftest.py
tests/e2e/: __init__.py  test_backtest_workflow.py
tests/functional/: test_backtest_workflow.py
tests/integration/: test_broker_integration.py  test_db_integration.py
tests/unit/: __init__.py  test_broker_handler.py  test_cli.py  test_configuration.py  test_data_quality.py  test_db_handler_storage.py  test_exception_handler.py  test_live_system.py  test_performance_analyzer.py  test_progress_utils.py  test_risk_manager.py  test_strategies.py
