[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intraday-trader"
version = "0.1.0"
authors = [
  { name="Richard", email="xieruncheng@gmail.com" }
]
description = "A comprehensive Python framework for algorithmic trading strategy development, back-testing, and live trading."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { file="LICENSE.txt" }
keywords = ["trading", "algorithmic-trading", "back-testing", "finance", "alpaca"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Core dependencies: these are required to run the project.
# NOTE: alpaca-trade-api is still a core dependency for backward compatibility.
# After Phase 2 (broker_handler.py shim removal), it will move to optional.
dependencies = [
    "pandas>=1.5,<3.0",
    "numpy>=1.26,<2.1",
    "pyyaml>=6.0,<7.0",
    "matplotlib>=3.5,<4.0",
    "requests>=2.28,<3.0",
    "python-dotenv>=0.21,<2.0",
    "pyarrow>=11.0,<18.0",
    "websockets>=10.0,<12.0",
    "scipy>=1.8,<2.0",
    "alpaca-trade-api>=3.0,<5.0",
    "backtrader>=1.9,<2.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio", # For testing asyncio code
    "pytest-cov",
]

postgres = [
    "psycopg2-binary",
]

dashboard = [
    "streamlit",
    "seaborn>=0.12",
]

# QEE execution backend (optional, only needed when execution.backend == "qee")
qee = [
    "quant-execution-engine @ git+https://github.com/runchengxie/quant-execution-engine.git",
]

# Futu / FutuOpenD broker adapter (optional, only needed when broker.name == "futu")
futu = [
    "futu-api>=9.6",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "pyright",
]

# Define script entry points, allowing them to be run from the command line after installation.
# NOTE: run-backtest, run-live, run-update-data, run-generate-report, run-dashboard
# are DEPRECATED. Use the unified `intraday` CLI instead. They will be removed in a future release.
[project.scripts]
intraday = "intraday_trader.cli:main"
run-backtest = "intraday_trader.scripts.run_backtests:main"  # DEPRECATED
run-live = "intraday_trader.scripts.run_live_trading:main"   # DEPRECATED
run-update-data = "intraday_trader.scripts.run_update_data:main"  # DEPRECATED
run-generate-report = "intraday_trader.scripts.run_generate_report:main"  # DEPRECATED
run-dashboard = "intraday_trader.scripts.run_dashboard:main"  # DEPRECATED

[project.urls]
Homepage = "https://github.com/runchengxie/intraday-trader"
"Bug Tracker" = "https://github.com/runchengxie/intraday-trader/issues"

# --- Tool-specific configurations ---

# Use the standard src-layout configuration.
# This tells setuptools that the root for all packages is the 'src' directory.
[tool.setuptools]
package-dir = {"" = "src"}


# --- Ruff Configuration ---
[tool.ruff]
# Set the target Python version
target-version = "py310"
# Set the line length
line-length = 88
# Exclude non-source directories
exclude = ["project_tools"]

# --- Ruff Formatter Configuration ---
[tool.ruff.format]
# Enable docstring code formatting.
docstring-code-format = true

# --- Ruff Linter Configuration ---
[tool.ruff.lint]
# Select the rule codes to enable.
# E, W: pycodestyle (standard errors and warnings)
# F: Pyflakes (common logical errors)
# I: isort (import sorting)
# UP: pyupgrade (modernize code syntax)
# PL: Pylint (many transplanted Pylint rules)
# B: flake8-bugbear (common bug patterns)
# C4: flake8-comprehensions (simplify comprehensions)
# SIM: flake8-simplify (code simplification)
# RET: flake8-return (return statement checks)
# ARG: flake8-unused-arguments (unused arguments)
# DTZ: flake8-datetimez (timezone-aware datetime)
# RUF: Ruff-specific rules
select = ["E", "W", "F", "I", "UP", "PL", "B", "C4", "SIM", "RET", "ARG", "DTZ", "RUF"]

# Ignore specific rules.
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", # pydocstyle missing docstrings
    "PLR0913",  # Too many arguments — deferred for P2 refactoring
    "PLR0912",  # Too many branches — deferred for P2 refactoring
    "PLR0915",  # Too many statements — deferred for P2 refactoring
    "PLR0911",  # Too many return statements — minor
    "PLR2004",  # Magic value comparisons — P4: extract constants
    "E501",     # Line too long — P4: line-width reformatting pass
    "PLC0415",  # Import not at top-level — intentional lazy imports
    "E402",     # Module-level import not at top — tests use importorskip
    "DTZ005",   # datetime.now() without tz — P4: timezone audit
    "DTZ001",   # datetime() without tzinfo — P4: timezone audit
    "DTZ003",   # datetime.utcnow() — P4: timezone audit
    "RUF013",   # Implicit Optional — P4: add explicit |None
    "RET504",   # Unnecessary assignment — minor style
    "SIM105",   # Use contextlib.suppress — minor style
    "SIM108",   # Use ternary operator — minor style
    "SIM102",   # Collapsible if — minor style
    "RUF001",   # Ambiguous unicode character — intentional
    "ARG001",   # Unused function argument — P4 cleanup
    "ARG002",   # Unused method argument — P4 cleanup
    "ARG005",   # Unused lambda argument — P4 cleanup
    "UP031",    # Use format specifiers — P4 cleanup
    "C408",     # Unnecessary dict() call — minor style
    "PLW0603",  # Global statement — P4 cleanup
]

# Per-file ignores for test files (stricter rules don't apply)
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B006",   # Mutable default arguments in test helpers
    "B012",   # return inside finally in test fixtures
    "ARG001", # Unused function argument in tests
    "ARG002", # Unused method argument in tests
]

# Specific configuration for the import sorter (isort).
[tool.ruff.lint.isort]
# Specify known third-party libraries to help Ruff sort them correctly.
known-third-party = ["alpaca_trade_api", "backtrader", "matplotlib", "numpy", "pandas", "pytest", "pyyaml", "requests", "streamlit", "sqlalchemy", "seaborn", "scipy"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "off"